Bug 76055 - [Qt] Some css3 filter tests are failing after r104698
Summary: [Qt] Some css3 filter tests are failing after r104698
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Tools / Tests (show other bugs)
Version: 528+ (Nightly build)
Hardware: All Linux
: P2 Normal
Assignee: Csaba Osztrogonác
URL:
Keywords:
Depends on:
Blocks: 75842
  Show dependency treegraph
 
Reported: 2012-01-11 05:33 PST by Gabor Rapcsanyi
Modified: 2012-01-11 06:34 PST (History)
1 user (show)

See Also:


Attachments
Patch (3.19 KB, patch)
2012-01-11 06:22 PST, Csaba Osztrogonác
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Rapcsanyi 2012-01-11 05:33:25 PST
css3/filters/effect-blur.html:
--- /ramdisk/qt-linux-64-release/build/layout-test-results/css3/filters/effect-blur-expected.txt 
+++ /ramdisk/qt-linux-64-release/build/layout-test-results/css3/filters/effect-blur-actual.txt 
@@ -1,3 +1,4 @@
+ERROR: LayoutTestController::overridePreference() does not support the 'WebKitAcceleratedCompositingEnabled' preference
 layer at (0,0) size 800x600
   RenderView at (0,0) size 800x600
 layer at (0,0) size 800x600


css3/filters/effect-brightness.html:
--- /ramdisk/qt-linux-64-release/build/layout-test-results/css3/filters/effect-brightness-expected.txt 
+++ /ramdisk/qt-linux-64-release/build/layout-test-results/css3/filters/effect-brightness-actual.txt 
@@ -1,3 +1,4 @@
+ERROR: LayoutTestController::overridePreference() does not support the 'WebKitAcceleratedCompositingEnabled' preference
 layer at (0,0) size 800x600
   RenderView at (0,0) size 800x600
 layer at (0,0) size 800x600


css3/filters/effect-contrast.html:
--- /ramdisk/qt-linux-64-release/build/layout-test-results/css3/filters/effect-contrast-expected.txt 
+++ /ramdisk/qt-linux-64-release/build/layout-test-results/css3/filters/effect-contrast-actual.txt 
@@ -1,3 +1,4 @@
+ERROR: LayoutTestController::overridePreference() does not support the 'WebKitAcceleratedCompositingEnabled' preference
 layer at (0,0) size 800x600
   RenderView at (0,0) size 800x600
 layer at (0,0) size 800x600


css3/filters/effect-drop-shadow.html:
--- /ramdisk/qt-linux-64-release/build/layout-test-results/css3/filters/effect-drop-shadow-expected.txt 
+++ /ramdisk/qt-linux-64-release/build/layout-test-results/css3/filters/effect-drop-shadow-actual.txt 
@@ -1,3 +1,4 @@
+ERROR: LayoutTestController::overridePreference() does not support the 'WebKitAcceleratedCompositingEnabled' preference
 layer at (0,0) size 800x600
   RenderView at (0,0) size 800x600
 layer at (0,0) size 800x600


css3/filters/effect-grayscale.html:
--- /ramdisk/qt-linux-64-release/build/layout-test-results/css3/filters/effect-grayscale-expected.txt 
+++ /ramdisk/qt-linux-64-release/build/layout-test-results/css3/filters/effect-grayscale-actual.txt 
@@ -1,3 +1,4 @@
+ERROR: LayoutTestController::overridePreference() does not support the 'WebKitAcceleratedCompositingEnabled' preference
 layer at (0,0) size 800x600
   RenderView at (0,0) size 800x600
 layer at (0,0) size 800x600


css3/filters/effect-hue-rotate.html:
--- /ramdisk/qt-linux-64-release/build/layout-test-results/css3/filters/effect-hue-rotate-expected.txt 
+++ /ramdisk/qt-linux-64-release/build/layout-test-results/css3/filters/effect-hue-rotate-actual.txt 
@@ -1,3 +1,4 @@
+ERROR: LayoutTestController::overridePreference() does not support the 'WebKitAcceleratedCompositingEnabled' preference
 layer at (0,0) size 800x600
   RenderView at (0,0) size 800x600
 layer at (0,0) size 800x600


css3/filters/effect-invert.html:
--- /ramdisk/qt-linux-64-release/build/layout-test-results/css3/filters/effect-invert-expected.txt 
+++ /ramdisk/qt-linux-64-release/build/layout-test-results/css3/filters/effect-invert-actual.txt 
@@ -1,3 +1,4 @@
+ERROR: LayoutTestController::overridePreference() does not support the 'WebKitAcceleratedCompositingEnabled' preference
 layer at (0,0) size 800x600
   RenderView at (0,0) size 800x600
 layer at (0,0) size 800x600


css3/filters/effect-opacity.html:
--- /ramdisk/qt-linux-64-release/build/layout-test-results/css3/filters/effect-opacity-expected.txt 
+++ /ramdisk/qt-linux-64-release/build/layout-test-results/css3/filters/effect-opacity-actual.txt 
@@ -1,3 +1,4 @@
+ERROR: LayoutTestController::overridePreference() does not support the 'WebKitAcceleratedCompositingEnabled' preference
 layer at (0,0) size 800x600
   RenderView at (0,0) size 800x600
 layer at (0,0) size 800x600


css3/filters/effect-saturate.html:
--- /ramdisk/qt-linux-64-release/build/layout-test-results/css3/filters/effect-saturate-expected.txt 
+++ /ramdisk/qt-linux-64-release/build/layout-test-results/css3/filters/effect-saturate-actual.txt 
@@ -1,3 +1,4 @@
+ERROR: LayoutTestController::overridePreference() does not support the 'WebKitAcceleratedCompositingEnabled' preference
 layer at (0,0) size 800x600
   RenderView at (0,0) size 800x600
 layer at (0,0) size 800x600


css3/filters/effect-sepia.html:
--- /ramdisk/qt-linux-64-release/build/layout-test-results/css3/filters/effect-sepia-expected.txt 
+++ /ramdisk/qt-linux-64-release/build/layout-test-results/css3/filters/effect-sepia-actual.txt 
@@ -1,3 +1,4 @@
+ERROR: LayoutTestController::overridePreference() does not support the 'WebKitAcceleratedCompositingEnabled' preference
 layer at (0,0) size 800x600
   RenderView at (0,0) size 800x600
 layer at (0,0) size 800x600
Comment 1 Gabor Rapcsanyi 2012-01-11 05:59:01 PST
I have skipped them until fix:
http://trac.webkit.org/changeset/104704
Comment 2 Csaba Osztrogonác 2012-01-11 06:22:59 PST
Created attachment 122014 [details]
Patch
Comment 3 Csaba Osztrogonác 2012-01-11 06:34:01 PST
Comment on attachment 122014 [details]
Patch

Clearing flags on attachment: 122014

Committed r104708: <http://trac.webkit.org/changeset/104708>
Comment 4 Csaba Osztrogonác 2012-01-11 06:34:07 PST
All reviewed patches have been landed.  Closing bug.