[Qt] Some css3 filter tests are failing after r104698 https://bugs.webkit.org/show_bug.cgi?id=76055

Reviewed by Simon Hausmann.

Tools:

* DumpRenderTree/qt/LayoutTestControllerQt.cpp:
(LayoutTestController::overridePreference): Add WebKitAcceleratedCompositingEnabled preference.

LayoutTests:

* platform/qt/Skipped: Unskip now passing tests.

Canonical link: https://commits.webkit.org/92880@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104708 268f45cc-cd09-0410-ab3c-d52691b4dbfc